--- a/.env
+++ b/.env
@@ -8,7 +8,7 @@ API_HASH = "4640d270ee0747b61d415d5b4465bd18" #  Get this value from https://my.
 
 SUDO_USERS = "5108914814" # For multiple Users Use Space
 
-DURATION_LIMIT = "" # In Mins (EX :- 60)
+DURATION_LIMIT = "1200" # In Mins (EX :- 60)
 
 ASSISTANT_NAME = "musssicw" # Fill there Your Assistant Username without @
 
